opam-version: "2.0"
name: "excmd"
version: "~dev"
maintainer: "ELLIOTTCABLE <ocaml@ell.io>"
authors: "ELLIOTTCABLE <ocaml@ell.io>"
build: [ [make] ]
depends: [
   "ocaml" {= "4.02.3"}

   "uchar" {>= "0.0.2" & < "0.1.0"}
   "gen" {>= "0.4" & < "0.5"}

   "sedlex" {>= "2.0" & < "3.0"}
   "ppx_tools" {= "5.0+4.02.0"}

   "ppx_deriving" {>= "4.2.1" & < "5.0.0"}
   "ppx_deriving_yojson" {>= "3.1" & < "4.0"}

   "menhir" {build & >= "20190626"}
   "uucd" {build & >= "11.0.0"}
   "dune" {build & >= "1.11.0"}

   "utop" {dev & >= "2.2.0"}
   "odoc" {dev & >= "1.3.0"}
   "merlin" {dev & >= "3.2.2"}
]
url {
  src: "https://github.com/ELLIOTTCABLE/excmd.js.git"
}
