(library
 (name        excmd)
 (public_name excmd)
 (libraries ppx_deriving_yojson.runtime sedlex)
 (preprocess (pps ppx_deriving_yojson sedlex.ppx))

 ; Disable fatal-level warnings from the compiled output
 (flags (:standard -w -K-9)))

(rule
 (mode standard)
 (deps aST.ocaml.ml)
 (targets aST.ml)
 (action  (copy %{deps} %{targets})))

(documentation
 (package excmd)
 (mld_files :standard))
