(executables
 (names parser_test)
 (libraries excmd-parser ppx_deriving_yojson.runtime)
 (preprocess (pps ppx_deriving_yojson))
 (flags (:standard -w -K)))

(rule
 (with-stdout-to parser_test.output (run ./parser_test.exe)))

(alias
 (name runtest)
 (action (diff parser_test.expected parser_test.output)))
